--- a/client/index.html
+++ b/client/index.html
@@ -33,12 +33,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&family=Manrope:wght@700&display=swap" rel="stylesheet">
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-xxxxxxxxx"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17686188611"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'AW-xxxxxxxxx');
+      gtag('config', 'AW-17686188611');
     </script>
   </head>
   <body>
